# ai-rules

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md  RELEASE.md  rust-toolchain.toml  test.sh
.cursor/rules/: ai-rules-generated-index.mdc
.github/workflows/: ai-rules-artifacts-template.yml  ai-rules-release.yml  artifacts-template.yml  ci.yml  create-artifacts.yml  release.yml
Example/: .gitignore  ai-rules.sh
Example/ai-rules/: ai-rules-config.yaml  example-optional.md  example-required.md  example-required_without_frontmatter.md  firebender-overlay.json  mcp.json  required-secret-file.md
ai-rules/: ai-rules-config.yaml  index.md
ai-rules/.generated-ai-rules/: ai-rules-generated-AGENTS.md  ai-rules-generated-index.md
docs/: agents.md  commands-and-skills.md  configuration.md  mcp.md  migration.md  project-structure.md  rule-format.md
scripts/: clippy-check.sh  clippy-fix.sh  install.sh  release.sh  trigger-release.sh
src/: config.rs  constants.rs  main.rs
src/agents/: amp.rs  amp_command_generator.rs  claude.rs  claude_command_generator.rs  codex.rs  command_generator.rs  cursor.rs  cursor_command_generator.rs  external_commands_generator.rs  external_skills_generator.rs  firebender.rs  gemini.rs  jetbrains_ai_assistant.rs  markdown_based.rs  mcp_generator.rs  mod.rs  registry.rs  roo.rs  rule_generator.rs  single_file_based.rs  skills_generator.rs
src/cli/: args.rs  config_resolution.rs  mod.rs  tests.rs
src/commands/: clean.rs  generate.rs  init.rs  install.rs  list_agents.rs  migrate.rs  mod.rs  status.rs  (+1 more)
(+33 files in other folders)
