[package]
name = "ai-rules"
version = "1.0.0"
edition = "2021"
description = "A modular, zero-dependency tool to manage AI rules across different AI coding agents"
authors = ["Block <ai-oss-tools@block.xyz>"]
license = "MIT"

[[bin]]
name = "ai-rules"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
cliclack = "0.3.6"
regex = "1.10"
which = "8.0.0"

[dev-dependencies]
tempfile = "3.0"

[profile.dev]
  debug = true
  panic = "unwind"